--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body> 
   <h1> Prácticas de laboratorio de Ivan Yared Cambranis Juarez </h1>
   <a href = "Practica1.html"> Práctica 1 </a> <br>
-  <a href = "Practica2.html"> Práctica 2 </a>
+  <a href = "Practica2.html"> Práctica 2 </a> <br>
+  <a href = "Practica3.html"> Práctica 3 </a> <br>
 </body>
