--- a/index.html
+++ b/index.html
@@ -11,4 +11,5 @@
   <a href = "Practica3.html"> Práctica 3 </a> <br>
   <a href = "Practica4.html"> Práctica 4 </a> <br>
   <a href = "Practica5.html"> Práctica 5 </a> <br>
+  <a href = "Practica6.html"> Práctica 6 </a> <br>
 </body>
