--- a/index.html
+++ b/index.html
@@ -13,4 +13,5 @@
   <a href = "Practica5.html"> Práctica 5 </a> <br>
   <a href = "Practica6.html"> Práctica 6 </a> <br>
   <a href = "http://127.0.0.1/Programacio%cc%81n_Ivancambrannis/PRACTICA%201.php"> Practica1 php </a> <br>
+  <a href = "http://127.0.0.1/Programacio%cc%81n_Ivancambrannis/PRACTICA%202.php"> Practica2 php </a> <br>
 </body>
