--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <a href = "Practica6.html"> Práctica 6 </a> <br>
   <a href = "http://127.0.0.1/Programacio%cc%81n_Ivancambrannis/PRACTICA%201.php"> Practica1 php </a> <br>
   <a href = "http://127.0.0.1/Programacio%cc%81n_Ivancambrannis/PRACTICA%202.php"> Practica2 php </a> <br>
-  <a href = "http://127.0.0.1/Programación_Ivancambrannis/Tareaphp.php"> Practica3 </a> <br>
-  <a href = "http://127.0.0.1/Programación_Ivancambrannis/PRACTICA%204.php" </a> <br>
-  <a href = "http://127.0.0.1/Programación_Ivancambrannis/PRACTICA%205.php" </a> <br>  
+  <a href = "http://127.0.0.1/Programación_Ivancambrannis/Tareaphp.php"> Practica3 php </a> <br>
+  <a href = "http://127.0.0.1/Programación_Ivancambrannis/PRACTICA%204.php"> Pracica4 php </a> <br>
+  <a href = "http://127.0.0.1/Programación_Ivancambrannis/PRACTICA%205.php"> Practica5 php </a> <br>  
 </body>
