--- a/index.html
+++ b/index.html
@@ -17,4 +17,6 @@
   <a href = "http://127.0.0.1/Programación_Ivancambrannis/PRACTICA%203.php"> Practica3 php </a> <br>
   <a href = "http://127.0.0.1/Programación_Ivancambrannis/PRACTICA%204.php"> Practica4 php </a> <br>
   <a href = "http://127.0.0.1/Programación_Ivancambrannis/PRACTICA%205.php"> Practica5 php </a> <br>  
+  <a href = "http://127.0.0.1/Programación_Ivancambrannis/PRACTICA6php.php"> Practica6 php </a> <br>
+  <a href = "http://127.0.0.1/Programación_Ivancambrannis/PRACTICA%207.php"> Practica7 php </a> <br>  
 </body>
