--- a/index.html
+++ b/index.html
@@ -18,5 +18,5 @@
   <a href = "http://127.0.0.1/Programación_Ivancambrannis/PRACTICA%204.php"> Practica4 php </a> <br>
   <a href = "http://127.0.0.1/Programación_Ivancambrannis/PRACTICA%205.php"> Practica5 php </a> <br>  
   <a href = "http://127.0.0.1/Programación_Ivancambrannis/PRACTICA6php.php"> Practica6 php </a> <br>
-  <a href = "imagen.png"> Practica7 php </a> <br>  
+  <a href = "image.png"> Practica7 php </a> <br>  
 </body>
