--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <a href = "Practica4.html"> Práctica 4 </a> <br>
   <a href = "Practica5.html"> Práctica 5 </a> <br>
   <a href = "Practica6.html"> Práctica 6 </a> <br>
-  <a href = "http://127.0.0.1/Programacio%cc%81n_Ivancambrannis/PRACTICA%201.php"> Practica1 php </a> <br>
-  <a href = "http://127.0.0.1/Programacio%cc%81n_Ivancambrannis/PRACTICA%202.php"> Practica2 php </a> <br>
+  <a href = "http://127.0.0.1/Programación_Ivancambrannis/PRACTICA%201.php"> Practica1 php </a> <br>
+  <a href = "http://127.0.0.1/Programación_Ivancambrannis/PRACTICA%202.php"> Practica2 php </a> <br>
   <a href = "http://127.0.0.1/Programación_Ivancambrannis/PRACTICA%203.php"> Practica3 php </a> <br>
   <a href = "http://127.0.0.1/Programación_Ivancambrannis/PRACTICA%204.php"> Practica4 php </a> <br>
   <a href = "http://127.0.0.1/Programación_Ivancambrannis/PRACTICA%205.php"> Practica5 php </a> <br>  
